deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: carvedrockpipelineapi
  name: carvedrockpipelineapi
  annotations:
    fluxcd.io/ignore: "false"
    fluxcd.io/automated: "true"
    # fluxcd.io/tag.carvedrockpipelineapi: semver:~1.19.x
spec:
  replicas: 5
  selector:
    matchLabels:
      app: carvedrockpipelineapi
  template:
    metadata:
      labels:
        app: carvedrockpipelineapi
    spec:
      containers:
      - image: pauljmartin16/carvedrockpipelineapi:latest
        name: carvedrockpipelineapi
        ports:
        - containerPort: 80
        volumeMounts:
          - name: appsettings-volume
            mountPath: /app/appsettings.json
            subPath: appsettings.json
        livenessProbe:
          initialDelaySeconds: 2
          periodSeconds: 2
          httpGet:
            port: 80
            path: /health/live
        readinessProbe:
          initialDelaySeconds: 2
          periodSeconds: 2
          httpGet:
            port: 80
            path: /health/ready
      volumes:
        - name: appsettings-volume
          configMap:
             name: carvedrockapi-configmap
