ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carvedrockpipelineapi-ingress
  labels:
    app: carvedrockpipelineapi
  annotations:
    fluxcd.io/ignore: "false"
    fluxcd.io/automated: "true"
spec:
  defaultBackend:
    service:
      name: carvedrockpipelineapi
      port: 
        number: 80
  rules:
  - host: carved.rock.api
    http:
      paths:
      - backend:
          service:
            name: carvedrockpipelineapi
            port: 
              number: 80
        pathType: ImplementationSpecific
